Fix(StaticJobAccessorTest): Include required fields